PIK-6771 added all withdrawal and settlment  server endpoint and tests
